# flagship

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .pre-commit.yaml  404.html  Makefile  README.md  docker-compose.deps.yml  index.html  mkdocs.yml  mypy.ini  package-lock.json  package.json  requirements.dev.txt  requirements.txt  ruff.toml  search.html  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: admin-deploy.yml  admin-pull-request.yml  flags-deploy.yml  flags-pull-request.yml  (+6 more)
.husky/: pre-commit
.pycharm/: server.run.xml  server.xml
admin/: Dockerfile  Makefile  index.html  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
admin-api/: index.html
backend/: mypy.ini  requirements-dev.txt  requirements.txt
context-fields/: index.html
development/: index.html
docker/: Makefile  docker-compose-deps.yml  docker-compose-dev.yml  docker-compose.yml
docs/: admin-api.md  context-fields.md  development.md  example.md  feature-flags.md  flags-api.md  index.md  installation.md  projects.md  sdk.md  ui.md  users.md
example/: index.html
feature-flags/: index.html
flags/: Dockerfile  Makefile  index.html  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
flags-api/: index.html
frontend/: .prettierrc  Dockerfile  components.json  next.config.js  package-lock.json  package.json
installation/: index.html
projects/: index.html
sdk/: index.html
sdk/python/: Makefile  README.md  pyproject.toml  requirements-dev.txt
sdk/python/flagship/: __init__.py
sdk/python/flagship_sdk/: __init__.py
search/: search_index.json
server/: requirements.txt
ui/: .eslintrc.json  .prettierrc.yml  index.html  package-lock.json  package.json  tsconfig.json
users/: index.html
(+655 files in other folders)
